# football-torch-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: prepare_data.py  run.py  visualise.py
experiments/: __init__.py  config.py  evaluator.py  experiment.py  experiment_results.py  trainer.py  trial.py  trial_result.py  trial_scheduler.py
fbref_scraper/: __init__.py  __main__.py  cleaner.py  config.py  database_objects.py  fetcher.py  league_discovery.py  parser.py  run.py  scraper.py
match_predictor/: config.py  constructor.py  eval.py  models.py  plots.py  run.py  run_experiment.py  run_experiment_eval.py  train.py
saved_tokenisers/: captain_tokeniser.json  day_tokeniser.json  league_tokeniser.json  manager_tokeniser.json  referee_tokeniser.json  season_tokeniser.json  team_tokeniser.json  venue_tokeniser.json
src/analysis/: prepare_data.py
src/fbref-scraper/: cleaner.py  config.py  database_objects.py  database_writer.py  fetcher.py  league_discovery.py  parser.py  run.py  scraper.py
src/fbref_scraper/: __init__.py  fetcher.py  parser.py  run.py  scraper.py
tensor_pipeline/: __init__.py  config.py  match_dataset.py  normaliser.py  preprocess.py  run.py  sample_store.py  tokeniser.py  transforms.py
tensor_pipeline/saved_normalisers/: numeric_normaliser.json
tensor_pipeline/saved_tokenisers/: captain_tokeniser.json  day_tokeniser.json  league_tokeniser.json  manager_tokeniser.json  referee_tokeniser.json  (+3 more)
utils/: __init__.py  config.py  format.py  helpers.py  prepare.py  save.py
(+7 files in other folders)
